--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eject": "react-scripts eject",
     "clean": "rm -rf node_modules && npm install"
   },
+  "proxy": "http://localhost:8000",
   "eslintConfig": {
     "extends": [
       "react-app",
