--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "^2.1.3",
     "sanitize-html": "^2.6.1",
+    "tabler-icons-react": "^1.42.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
