--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "react-bootstrap": "^2.1.1",
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
     "react-identicons": "^1.2.5",
     "react-loader-spinner": "^5.1.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^2.1.3",
+    "react-st-modal": "^1.1.3",
     "sanitize-html": "^2.6.1",
     "tabler-icons-react": "^1.42.0",
     "web-vitals": "^2.1.4"
