--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
+    "bulma": "^0.9.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-copy-to-clipboard": "^5.0.4",
