--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@aaditya1978/ckeditor5-build-classic": "^0.1.0",
     "@ckeditor/ckeditor5-react": "^3.0.3",
     "@mantine/core": "^4.0.7",
+    "@mantine/form": "^4.2.1",
     "@mantine/hooks": "^4.0.7",
     "@mantine/notifications": "^4.0.7",
     "@modulz/radix-icons": "^4.0.0",
@@ -13,9 +14,10 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
+    "bootstrap": "^5.1.3",
     "bulma": "^0.9.3",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.1.1",
+    "react-bootstrap": "^2.3.1",
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.2.0",
